# bara

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/bara/ast/: AST.def  AST.h  ASTPrinter.h  ASTVisitor.h  Expression.def  Pattern.def  Statement.def
include/bara/context/: ASTContext.h  GarbageCollector.h  MemoryContext.h
include/bara/diagnostic/: Diagnostic.h
include/bara/interpreter/: BuiltinFunctions.def  Environment.h  ExprInterpreter.h  Interpreter.h  InterpreterDiagnostic.def  Memory.def  Memory.h  REPL.h  StmtInterpreter.h  Value.def  Value.h  ValueDeleter.h
include/bara/parser/: Lexer.h  LexerDiagnostic.def  Parser.h  ParserDiagnostic.def  Token.def  Token.h
include/bara/utils/: LLVM.h  STL.h  VisitorBase.h
lib/: CMakeLists.txt
lib/ast/: AST.cpp  CMakeLists.txt
lib/context/: ASTContext.cpp  CMakeLists.txt  GarbageCollector.cpp  MemoryContext.cpp
lib/interpreter/: BinaryOperations.cpp  BuiltinFunctionDiagnostic.def  BuiltinFunctions.cpp  CMakeLists.txt  Environment.cpp  Interpreter.cpp  LvInterpreter.cpp  Memory.cpp  REPL.cpp  RvInterpreter.cpp  StmtInterpreter.cpp  Value.cpp  ValueDeleter.cpp
lib/parser/: CMakeLists.txt  Lexer.cpp  Parser.cpp  Token.cpp
test/: CMakeLists.txt
test/benchmark/: CMakeLists.txt
test/benchmark/algorithm/: CMakeLists.txt  generate.py  test_algorithm.py  test_valgrind.py
test/benchmark/algorithm/MST/: CMakeLists.txt  MST.bara  sol.cpp
test/benchmark/algorithm/MST/generator/: case.txt  gen.cpp
test/benchmark/algorithm/PrefixSum/: PrefixSum.bara
test/benchmark/algorithm/Sort/: CMakeLists.txt  MergeSort.bara  QuickSort.bara  sol.cpp
test/benchmark/algorithm/Sort/generator/: big.txt  big_gen.cpp  big_gen_sort.cpp  gen.cpp  gen_sort.cpp  small.txt
test/benchmark/algorithm/Sort/statements/: problem-statement.css  program-big.html  program.html
test/lit/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/lit/InterpreterTests/: Assignment.bara  BuiltinFunctions.bara  BuiltinFunctionsInput.txt  CompoundExpression.bara  Conditional.bara  DFS.bara  HashTable.bara  Lambda.bara  MergeSort.bara  MethodLike.bara  NestedFunction.bara  QuickSort.bara  QuickSort2.bara  Struct.bara  Swap.bara
test/lit/ParserTests/: Array.bara  CompoundExpression.bara  For.bara  Function.bara  If.bara  Lambda.bara  Match.bara
test/unittest/: CMakeLists.txt
test/unittest/ASTTests/: ASTPrintTests.cpp  CMakeLists.txt
test/unittest/InterpreterTests/: ArithmeticTests.cpp  CMakeLists.txt  CastTests.cpp  InterpreterTestUtils.h  ListTests.cpp  LiteralTests.cpp  TupleTests.cpp
test/unittest/ParserTests/: CMakeLists.txt  LexerTests.cpp  PrecedenceTests.cpp
tools/: CMakeLists.txt  bara.cpp
